--- a/style.css
+++ b/style.css
@@ -6,13 +6,70 @@
     box-sizing: border-box;
 }
 
-html, body{
-font-size: 16px;
-font-family: 'Roboto Mono', monospace;
+html {
+    font-size: 16px;
+    font-family: 'Roboto Mono', monospace;
+    color: black;
 
 }
 
-.container{
+body{
+    width: 100vw;
+    height: 100vh;
+    background-color: tan;
+}
+
+h1{
+    font-size: 2.5rem;
+   padding-left: 3rem;
+   text-align: center;
+    
+}
+
+label{
     display: flex;
-    flex-direction: column;
+    font-size: 1.5rem;
+    font-weight: bolder;
+    padding: 1rem;
+    place-content: center;
+    
+}
+
+input, button {
+    background: none repeat scroll 0 0 #66A3D2;
+    border-color: #FFFFFF #327CB5 #327CB5 #FFFFFF;
+    border-radius: 10px 10px 10px 10px;
+    border-style: solid;
+    border-width: 1px;
+    box-shadow: 1px 1px 3px #333333;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-weight: bold;
+    padding: 5px;
+    text-align: center;
+    text-shadow: 1px 1px 1px #000000;
+    padding: 1rem;
+}
+.button{
+    align-items: center;
+    padding: 1rem 1rem;
+    
+
+}
+
+
+
+.container {
+  text-align: center;
+  margin-top: 10rem;
+}
+
+.output{
+    font-size: 1rem;
+    font-weight: bolder;
+}
+
+.footer{
+    font-size: 1rem;
+    font-weight: bolder;
 }
